--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
             <!-- about section content -->
             <div class="about-content">
                 <p>
-                Content about me goes here
+                    Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the industry's 
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a 
+                    <br></br>
+                    type specimen book. It has survived not only five 
+                    centuries, but also the leap into electronic typesetting,
+                    remaining essentially unchanged. It was popularised in 
+                    the 1960s with the release of Letraset sheets containing
+                    Lorem Ipsum passages, and more recently with desktop 
+                    publishing software like Aldus PageMaker including 
+                    versions of Lorem Ipsum.
                 </p>
             </div>
         </div>
@@ -119,10 +130,11 @@
             </div>
             
             <!-- contact section content-->
-            <div class="about-content">
-                <p>
-                    Contact info goes here
-                </p>
+            <div class="contact-content">
+                <a href="#">647-230-7476</a>
+                <a href="#">mbrownet@gmail.com</a>
+                <a href="#">Twitter</a>
+                <a href="#">Spotify</a>
             </div>
         </div>
     </section>
