homepage name logo will now take user to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
 
             <!-- website logo -->
-            <div class="logo">Maxwell Brown</div>
+            <div class="logo" onclick="window.location.href='index.html'">Maxwell Brown</div>
             
             <!-- nav elements -->
             <ul class="nav">
