improved work section for normal viewport

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     
                     <!-- project2 content -->
                     <div class="work-project">
-                        <h2>Project 2</h2>
+                        <h2>Run Buddy<br><span class="lang-used">HTML/CSS</span></h2>
                     </div>
                     
                     <!-- project3 content -->
