added resume link and updated about me section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#contact-section">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#">Resume</a>
+                    <a href="https://resume.io/r/bUMtrnjYw">Resume</a>
                 </li>
             </ul>
         </div>
@@ -61,18 +61,26 @@
             <!-- about section content -->
             <div class="about-content">
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and 
-                    typesetting industry. Lorem Ipsum has been the industry's 
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a 
-                    <br></br>
-                    type specimen book. It has survived not only five 
-                    centuries, but also the leap into electronic typesetting,
-                    remaining essentially unchanged. It was popularised in 
-                    the 1960s with the release of Letraset sheets containing
-                    Lorem Ipsum passages, and more recently with desktop 
-                    publishing software like Aldus PageMaker including 
-                    versions of Lorem Ipsum.
+                    Meet Maxwell Brown, a highly skilled full stack web developer and UX designer with a passion for creating visually stunning and user-friendly websites. 
+                    With over 5 years of experience in the industry, Maxwell has a proven track record of delivering high-quality projects on time and within budget.
+                </p>
+
+                <p>
+                    Maxwell's expertise in both front-end and back-end development allows him to create seamless and efficient websites that are optimized for both performance and user experience. His keen eye for design and attention
+                    to detail ensure that each website he creates is visually appealing and easy to navigate.
+                </p>
+
+                <p>
+                    In addition to his technical skills, Maxwell is also an expert in user experience design. He has a deep understanding of the principles of good design and uses this knowledge to create websites that are intuitive and easy to use.
+                </p>
+
+                <p>
+                    Maxwell is a dedicated professional who is committed to staying up-to-date with the latest web development technologies and trends. He is always looking for new ways to improve his skills and is dedicated to providing his clients
+                    with the best possible service.
+                </p>
+
+                <p>
+                    If you're looking for a full stack web developer and UX designer who can help you create a beautiful and functional website, look no further than Maxwell Brown.
                 </p>
             </div>
         </div>
