--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#contact-section">Contact Me</a>
                 </li>
                 <li>
-                    <a href="https://resume.io/r/bUMtrnjYw">Resume</a>
+                    <a href="https://resume.io/r/bUMtrnjYw" target="_blank">Resume</a>
                 </li>
             </ul>
         </div>
