--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         
             <!-- contact section title -->
             <div class="contact-title">
-                <h2>Contact Me</h2>
+                <h2>Contact Mee</h2>
             </div>
             
             <!-- contact section content-->
